src/components/board/Troop.module.scss
@use 'sass:color';
@use 'sass:map';
@use '@/theme/colors';
@use '@/theme/fonts';

.Troop {
  pointer-events: none;
  transform: translate(-50%, -50%);

  text {
    text-anchor: middle;
    dominant-baseline: middle;
    fill: #ffffff;
    stroke: #000000;
    paint-order: stroke;
    stroke-width: 15px;
    stroke-linejoin: round;
    font-family: fonts.$troop-font-family;
    font-size: 4em;
    font-weight: 800;
  }

  ellipse {
    stroke: white;
    stroke-width: 10px;
    stroke-dasharray: 30;
    fill: black;
  }

  @each $key, $color in colors.$troop-colors {
    &[data-player-color="#{$key}"] ellipse {
      stroke-width: 2;
      stroke-dasharray: none;
      fill: $color;
      stroke: darken($color, 30%);
      filter: drop-shadow(6px 13px 2px #{darken($color, 10%)});
    }
  }
}

